# CMakeTest

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  greet.cpp  main.cpp  test.bat  test.cmake  test.sh
